<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/patientListFragment"
        android:icon="@drawable/ic_nav_patients"
        android:title="@string/nav_patients" />
    <item
        android:id="@+id/appointmentListFragment"
        android:icon="@drawable/ic_nav_appointments"
        android:title="@string/nav_appointments" />
    <item
        android:id="@+id/clinicFragment"
        android:icon="@drawable/ic_nav_clinic"
        android:title="@string/nav_clinic" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar_month"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
