<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.medcare.app.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.medcare.app.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.medcare.app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/patientListFragment"
        android:name="com.medcare.app.ui.patients.PatientListFragment"
        android:label="@string/patients"
        tools:layout="@layout/fragment_patient_list">
        <action
            android:id="@+id/action_patientList_to_patientForm"
            app:destination="@id/patientFormFragment" />
        <action
            android:id="@+id/action_patientList_to_patientDetail"
            app:destination="@id/patientDetailFragment" />
        <action
            android:id="@+id/action_patientList_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/patientDetailFragment"
        android:name="com.medcare.app.ui.patients.PatientDetailFragment"
        android:label="@string/patient_detail"
        tools:layout="@layout/fragment_patient_detail">
        <argument
            android:name="patientId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_patientDetail_to_patientForm"
            app:destination="@id/patientFormFragment" />
        <action
            android:id="@+id/action_patientDetail_to_appointmentDetail"
            app:destination="@id/appointmentDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/patientFormFragment"
        android:name="com.medcare.app.ui.patients.PatientFormFragment"
        android:label="@string/add_patient"
        tools:layout="@layout/fragment_patient_form">
        <argument
            android:name="patientId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/appointmentListFragment"
        android:name="com.medcare.app.ui.appointments.AppointmentListFragment"
        android:label="@string/appointments"
        tools:layout="@layout/fragment_appointment_list">
        <argument
            android:name="filterDate"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_appointmentList_to_appointmentForm"
            app:destination="@id/appointmentFormFragment" />
        <action
            android:id="@+id/action_appointmentList_to_appointmentDetail"
            app:destination="@id/appointmentDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/appointmentDetailFragment"
        android:name="com.medcare.app.ui.appointments.AppointmentDetailFragment"
        android:label="@string/appointment_detail"
        tools:layout="@layout/fragment_appointment_detail">
        <argument
            android:name="appointmentId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_appointmentDetail_to_appointmentForm"
            app:destination="@id/appointmentFormFragment" />
        <action
            android:id="@+id/action_appointmentDetail_to_patientDetail"
            app:destination="@id/patientDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/appointmentFormFragment"
        android:name="com.medcare.app.ui.appointments.AppointmentFormFragment"
        android:label="@string/add_appointment"
        tools:layout="@layout/fragment_appointment_form">
        <argument
            android:name="appointmentId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/clinicFragment"
        android:name="com.medcare.app.ui.clinic.ClinicFragment"
        android:label="@string/clinic_location"
        tools:layout="@layout/fragment_clinic">
        <action
            android:id="@+id/action_clinic_to_patientForm"
            app:destination="@id/patientFormFragment" />
        <action
            android:id="@+id/action_clinic_to_patientDetail"
            app:destination="@id/patientDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.medcare.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_patientList"
            app:destination="@id/patientListFragment" />
        <action
            android:id="@+id/action_dashboard_to_appointmentList"
            app:destination="@id/appointmentListFragment" />
        <action
            android:id="@+id/action_dashboard_to_appointmentDetail"
            app:destination="@id/appointmentDetailFragment" />
        <action
            android:id="@+id/action_dashboard_to_calendar"
            app:destination="@id/calendarFragment" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.medcare.app.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_calendar_to_appointmentDetail"
            app:destination="@id/appointmentDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/biometricLockFragment"
        android:name="com.medcare.app.ui.auth.BiometricLockFragment"
        android:label="@string/biometric_unlock"
        tools:layout="@layout/fragment_biometric_lock" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.medcare.app.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
